fix spacing, close hamburger on click outside

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -135,7 +135,7 @@
   background-color: var(--beige);
   border-radius: 12px;
   box-shadow: 0 2px 12px rgb(0 2 8 / 15%);
-  margin: 100px auto 50px auto;
+  margin: 100px auto 0px auto;
   z-index: 0;
 }
 
@@ -245,16 +245,15 @@
 @media (max-width: 500px) {
   .main {
     padding: 1rem 0.3rem;
-    border-radius: 10px;
-    margin: 60px auto 20px auto;
+    margin: 80px auto 5px auto;
   }
 
   .cardSpread .card,
   .cardSpread .card:nth-child(1),
   .cardSpread .card:nth-child(2),
   .cardSpread .card:nth-child(3) {
-    width: 98vw;
-    max-width: 98vw;
+    width: 90vw;
+    max-width: 90vw;
     height: 90px;
     font-size: 1rem;
     padding: 0.5rem;
@@ -272,5 +271,11 @@
   .paraTitle {
     font-size: 1rem;
     margin-bottom: 0.3rem;
+  }
+
+  .title,
+  .subtitle {
+    font-size: 1.4rem;
+    margin-top: 20px;
   }
 }
